modified:   index.html 	modified:   scripts/script.js 	modified:   styles/css/main.css 	modified:   styles/css/main.css.map 	modified:   styles/main.scss 	modified:   styles/scss/_base.scss 	modified:   styles/scss/_reset.scss 	modified:   styles/scss/_variables.scss 	deleted:    styles/scss/components/_dashboard.scss 	new file:   styles/scss/components/_dashboardComponent.scss 	new file:   styles/scss/components/_dashboardContainer.scss 	new file:   styles/scss/components/_dashboardHeader.scss

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <h1 class="sr_only">Time tracking dashboard</h1>
 
     <div class="dashboard">
+
       <!-- Header -->
       <div class="dashboard_header">
         <div class="header_avatar">
@@ -35,9 +36,9 @@
           </p>
         </div>
         <div class="header_report_time">
-          <p class="time_daily">Daily</p>
-          <p class="time_weekly">Weekly</p>
-          <p class="time_monthly">Monthly</p>
+          <button class="time_daily">Daily</button>
+          <button class="time_weekly">Weekly</button>
+          <button class="time_monthly">Monthly</button>
         </div>
       </div>
 
